k8s/order-service/deployment.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: order-service-deployment

spec:
  replicas: 2

  selector:
    matchLabels:
      app: order-service

  template:
    metadata:
      labels:
        app: order-service

    spec:
      containers:
      - name: order-service

        image: YOUR_DOCKER_USERNAME/order-service:latest

        imagePullPolicy: Always

        ports:
        - containerPort: 8082
