k8s/order-service/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
  name: order-service-ingress

spec:

  ingressClassName: nginx

  rules:
  - http:

      paths:

      - path: /order
        pathType: Prefix

        backend:

          service:
            name: order-service

            port:
              number: 8082
